# https_client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: client_interface.h  http_client.h  include.h  simple_https_client.h  socket_wrapper.h  using_openssl.h
src/: CMakeLists.txt  client_interface.cpp  client_interface.h  http_client.cpp  include.h  smatr_ptrs.h  socket_wrapper.cpp  socket_wrapper.h  using_openssl.cpp  using_openssl.h
tests/: CMakeLists.txt  client_interface_tests.cpp  http_client_web_test.cpp  https_client_web_test.cpp  web_tests.cpp
